# simdualkc

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  CR_VALIDATION_SUMMARY.md  LICENSE  README.md  gap_analysis.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: cr_matching_research.md  index.md  references.md
docs/api/: auxiliary.md  data-loader.md  eto.md  evaporation.md  irrigation.md  kcb.md  models.md  reporting.md  simulation.md  water-balance.md  yield-model.md
docs/guides/: automated-irrigation.md  eto-from-weather.md  groundcover.md  multilayer-soil.md  quickstart.md  salinity-yield.md
docs/javascripts/: mathjax.js
docs/theory/: auxiliary.md  eto.md  evaporation.md  kcb.md  overview.md  water-balance.md  yield.md
examples/: 01_basic_simulation.py  02_crop_soil_comparison.py  03_evaporation_physics.py  04_advanced_extensions.py  05_multilayer_soil.py  06_eto_calculation.py  07_automated_irrigation.py  08_groundcover_orchard.py  09_complete_workflow.py
scripts/: analyze_wheat_cr_mismatches.py  convert_mdb.py  extract_cr_parametric_fixtures.py  investigate_cr_hypotheses.py
src/simdualkc/: __init__.py  auxiliary.py  data_loader.py  eto.py  evaporation.py  irrigation.py  kcb.py  models.py  reporting.py  simulation.py  water_balance.py  yield_model.py
src/simdualkc/data/: T_CRiseDates.parquet  T_CRise_Param.parquet  T_Clima.parquet  T_Estacao.parquet  T_FW_Inicial.parquet  T_FW_irrig.parquet  T_FarmPond.parquet  T_Forragens.parquet  T_GCover_Manag.parquet  T_GCover_NoManag.parquet  T_GW_parametric.parquet  T_IrrigFrequency.parquet  T_KcbAdj_Fc.parquet  T_KcbAdj_LAI.parquet  T_Kcb_Dates.parquet  T_Ky_Periods.parquet  T_Lai_Dates.parquet  T_MultipleSoilEce.parquet  T_MultipleWaterEce.parquet  T_PeakRequire_result.parquet  T_Resultados.parquet  T_Runoff.parquet  T_Salinity.parquet  T_Simulacao.parquet  T_Solo.parquet  T_Teste.parquet  T_UserSchedule.parquet  T_aux_REW.parquet  (+17 more)
tests/: conftest.py  test_auxiliary.py  test_cr_parametric_isolated.py  test_eto.py  test_evaporation.py  test_forage.py  test_groundcover.py  test_irrigation_scheduling.py  test_kcb.py  test_lai.py  test_models.py  test_mulch.py  test_multilayer_soil.py  test_reference_data.py  test_rosa_etal_validation.py  test_salinity.py  test_simulation.py  test_summaries.py  test_water_balance.py  test_yield.py
(+34 files in other folders)
